# functions

./: .gitignore  GitVersion.yml  LICENSE  Makefile  README.md  pytest.ini
.github/workflows/: ci.yml  release.yml
docs/: PROJECT_MEMORY.md  STATUS.md  VISION.md  architecture.md  intake.md
docs/decisions/: d_001_function_contract.md  d_be_001_secret_scoping.md  d_be_002_eventing_substrate.md  d_infra_001_container_runtime.md
docs/modules/: be.md  fe.md  infra.md  shared.md
docs/stories/: be_001_execution_engine.md  be_002_secret_scoping.md  be_003_sandbox_posture.md  be_004_adapter_registry.md  be_005_bash_python_adapters.md  be_006_claude_adapter.md  be_007_io_mapping.md  be_008_env_secrets_injection.md  (+20 more)
examples/: claude_pipeline.yaml  pipeline.yaml
infra/: Dockerfile  README.md  install.sh
src/functions_be/: README.md  pyproject.toml
src/functions_be/functions_be/: __init__.py  __main__.py  adapters.py  api.py  auth.py  container.py  control.py  engine.py  env.py  events.py  loader.py  manager.py  resolver.py  runner.py  sandbox.py  server.py
src/functions_be/tests/: conftest.py  test_adapters_loader.py  test_api.py  test_be_smoke.py  test_container_env_sandbox.py  test_control.py  test_engine_runner.py  test_manager.py  test_resolver.py  test_server.py
src/functions_shared/: README.md  pyproject.toml
src/functions_shared/functions_shared/: __init__.py  expr.py  io.py  loader.py  models.py  refs.py  validation.py
src/functions_shared/tests/: test_expr.py  test_io.py  test_loader.py  test_models.py  test_refs.py  test_shared_smoke.py  test_validation.py
(+34 files in other folders)
