[project]
name = "functions-be"
version = "0.0.1"
description = "functions — orchestrator: execution engine, runtime adapters, resolver, lifecycle, API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bruno Fitas", email = "brunofitas@gmail.com" }]
dependencies = [
  "functions-shared",
  "anyio>=4",        # event bus (memory object streams) — per d_be_002
  "aiostream>=0.5",  # Rx-style operators over async generators
  "fastapi>=0.110",  # loopback API (be_011)
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["functions_be"]

[tool.ruff]
line-length = 100
