[project]
name = "functions-shared"
version = "0.0.1"
description = "functions — shared contract: manifest schema, runtime-adapter interface, shared types"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bruno Fitas", email = "brunofitas@gmail.com" }]
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["functions_shared"]

[tool.ruff]
line-length = 100
